test/resources/disallow_hostpid_hostipc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-hostpid
spec:
  hostPID: false
  hostIPC: true
  containers:
  - name: nginx
    image: nginx
