test/resources/disallow_privileged.yaml
apiVersion: v1
kind: Pod
metadata:
  name: check-privileged-cfg
spec:
  containers:
  - name: check-privileged-cfg
    image: nginxinc/nginx-unprivileged
    securityContext:
      allowPrivilegeEscalation: true
      privileged: true
