test/resources/pod-with-hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-hostpath
spec:
  containers:
  - image: k8s.gcr.io/test-webserver
    name: test-container
    volumeMounts:
    - mountPath: /tmp/foo
      name: host-volume
  volumes:
  - name: host-volume
    hostPath:
      path: "/tmp/foo"
