test/resources/pod_with_latest_tag_custom_namespace.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  namespace: custom
  labels:
    app: myapp
spec: 
  containers:
  - name: nginx
    image: nginx:latest
