test/resources/require_readonly_rootfilesystem.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ghost-with-readonly-rootfilesystem
spec:
  containers:
  - name: ghost
    image: ghost
    securityContext:
      readOnlyRootFilesystem: false
