test/resources/resource_default_namespace.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  namespace: default
  labels:
    app: myapp
spec: 
  containers:
  - name: nginx
    image: nginx
