test/resources/resource_mutate_validate_qos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: "2017-05-31T12:56:35Z"
  name: qos-demo
  labels:
    test: qos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      creationTimestamp: "2017-05-31T12:56:35Z"
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        resources:
          limits:
            cpu: "50m"
