test/resources/resource_validate_container_capabilities.yaml
apiVersion: v1
kind: Pod
metadata:
  name: add-capabilities
spec:
  containers:
  - name: add-capabilities
    image: gcr.io/google-samples/node-hello:1.0
    securityContext:
      capabilities:
        add: ["SYS_TIME"]
