test/resources/resource_validate_disallow_default_serviceaccount.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-default-sa
  labels:
    app: pod-with-default-sa
spec: 
  serviceAccountName: default
  containers:
  - name: nginx
    image: nginx
