test/resources/resource_validate_imageRegistries.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nirmata-nginx
  labels:
    app: nirmata-nginx
    cli: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nirmata-nginx
        # image: nginx
        image: nirmata/nginx
