test/resources/trusted_image_registries.yaml
apiVersion: v1
kind: Pod
metadata:
  name: k8s-nginx
spec:
  containers:
  - name: k8s-nginx
    image: k8s.gcr.io/nginx:1.7.9
